Make space for vertical scroll bar to prevent horizontal scroll bar appearing

--- a/client/scss/partials/_modal.scss
+++ b/client/scss/partials/_modal.scss
@@ -23,9 +23,9 @@
   margin: 0 auto;
   max-height: 100%;
   overflow: auto;
-  padding: 1rem;
+  padding: 1rem 15px 1rem 1rem;
   position: relative;
-  width: 375px;
+  width: 395px;
 }
 
 .Modal-closeButton {
